# news-scraper

./: .gitignore  README.md  news_artificial_intelligence_2026-05-15.txt  news_scraper.py  news_scraper.spec  news_space_exploration_2026-05-15.txt  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-16-packaging.md
docs/superpowers/specs/: 2026-05-16-packaging-design.md
scraper/: core.py
tests/: test_core.py
